# Programowanie-w-j-zyku-JAVA---TZ

./: README.md
Lab01-Metro/: .classpath  .project  Lab01-Metro.eml
Lab01-Metro/src/lab01/: Bramka.java  BramkaApp.form  BramkaApp.java  CentralaApp.form  CentralaApp.java  IBramka.java  ICentrala.java  IMonitor.java  Monitor.java  MonitorApp.form  MonitorApp.java  MonitorListModel.java  PortFactory.java
Lab02-ClassLoaderReflection/ClassLoader/src/: Main.java
Lab02-ClassLoaderReflection/TextProcesing/src/: Exclamation.java  ITextProcesing.java  UpperCase.java
Lab02-ClassLoaderReflection/TextProcesing2/src/: Text2.java
Lab03-Annotation/Lab03-Tic-Tac-Toe-AI/src/: LineAI.java  RandomAI.java
Lab03-Tic-Tac-Toe/src/: TicTacToe.java
Lab04-JavaBeans/src/: test.java  test.jfd
Lab04-JavaBeans/src/lab04/: Note.java  NoteBean.java  NoteBeanBeanInfo.java  NoteBeanCustomizer.java  NoteBeanInfo.java  NoteCustomizer.java  NoteData.java  TitlePositionEditor.java
Lab05-JNI/Java-C++/: CMakeLists.txt  HelloJNI.cpp  lab5_DotProduct.cpp  lab5_DotProduct.h
Lab05-JNI/Java-JNI/: .gitignore
Lab05-JNI/Java-JNI/src/: HelloJNI.java
Lab06-WRef/src/lab6/: App.java
Lab07-JDBC/: .gitignore
Lab08-SOAP/: README.md
Lab08-SOAP/Centrala/: .gitignore
Lab09-Cryptography/: .gitignore  .keystore  test
Lab10-JWebStart/: README.md  docker-compose.yml
Lab10-JWebStart/files/: Encryptor.jnlp
Lab11-JS/: README.md  app.js  demoralizator.js  moralizator.js
Lab12-JAXB/: .gitignore  README.md  pom.xml
Lab12-JAXB/transformacje/: s1.xsl  s2.xsl
Lab14-BigNumbers/: README.md
(+95 files in other folders)
